refactor: add validation layer for dashboards crud